# sog

./: .gitignore  README.md  calibrate_phi_max_anchors.py  check_deepmd.py  compare.py  compare_fft_forms.py  fit_phi_max_law.py  input_v2_compat.json  phi_max_anchors.json  phi_max_rule.py  refine_phi_max_constants.py  setup.py  simulate_mace_sog.py  validate_error_formula.py  validate_kspace_192.py  verify_anchors.py  verify_cons_phi.py  verify_fft_vs_direct.py  verify_order6.py  verify_phi_max.py
example/: compare_with_deepmd_sog.py  input.yaml
lmp/: CMakeLists.txt  README.md  sog.cpp  sog.h  sog_spline.h
src/sog/: __init__.py  sog.py
src/sog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sog/module/: __init__.py  atomwise.py  bec.py  blocks.py  cubes2_fft.py  cubes2_spline.py  gaussian.py  influence_analytic.py  quads_fft.py  quads_spline.py
src/sog/util/: __init__.py  deepmd_ref.py  grad.py  scatter.py
test/: benchmark_cubes2.py  compare_fastsog_sog  compare_fastsog_sog.cpp  test_batched_mixed.py  test_cubes2_fft.py  test_cubes2_order6.py  test_deepmd_alignment.py  test_direct_symmetry.py  test_explicit_alignment.py  test_force_fd_realspace.py  test_gaussian_external_kernel_tensors.py  test_gaussian_triclinic.py  test_phi_convergence.py  test_phi_max_rule.py  test_phi_max_verify.py  test_r_cut_sigma.py  test_small_scale.py  test_sog_class.py  test_sog_kernel_modes.py
tools/: scan_fft_accuracy.py
